--- a/src/components/advantages.css
+++ b/src/components/advantages.css
@@ -1,6 +1,14 @@
 .advantages {
-  background: #f3f3f3;
+  position: relative;
+  width: 100vw;               
+  left: 50%;                 
+  right: 50%;
+  margin-left: -50vw;      
+  margin-right: -50vw;
+  background: #ffffff;
   padding: 80px 0;
+  display: flex;
+  justify-content: center;
 }
 
 .advantages-container {
@@ -159,7 +167,6 @@
   overflow: hidden;
   transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
   flex-shrink: 0;
-  /* Плавне переміщення через transform */
 }
 
 .advantages-gallery-img {
