--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,8 @@
 
 html {
   background: #F3F3F3;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -21,7 +23,8 @@ body {
   font-weight: 400;
   font-style: normal;
   font-synthesis: none;
- 
+  margin: 0;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -55,7 +58,8 @@ a {
 
 
 .page-content {
-  padding: 0 0 40px;
+  padding: 0;
+  margin-bottom: 0;
 }
 
 @media (prefers-color-scheme: dark) {
