--- a/src/components/home/productShowcase.css
+++ b/src/components/home/productShowcase.css
@@ -3,6 +3,7 @@
   width: 100vw;
   left: 50%;
   right: 50%;
+  margin-top: -5vw;
   margin-left: -50vw;
   margin-right: -50vw;
   padding: 80px 0;
@@ -16,7 +17,7 @@
   margin: 0 auto;
   padding: 60px 40px;
   background: #ffffff;
-  border-radius: 40px;
+  border-radius: 30px;
   display: grid;
   grid-template-columns: 320px 1fr;
   gap: 60px;
