Complete about page implementation
- Created AboutHero component with hero section
- Created AboutQuality component with quality standards and priorities
- Created AboutFeatures component with feature cards
- Created AboutHistory component with timeline
- Created AboutStandards component with quality standards cards and text
- Created AboutProduction component with production images and mask
- Created AboutCharity component with charity information and images
- Added all necessary images and SVGs for about page
- Styled all components with responsive design
- Integrated Footer component into about page

--- a/src/components/home/advantages.css
+++ b/src/components/home/advantages.css
@@ -115,8 +115,8 @@
   position: relative;
   width: 100%;
   aspect-ratio: 764 / 782;
-  -webkit-mask: url(/images/advantages/mask.svg);
-  mask: url(/images/advantages/mask.svg);
+  -webkit-mask: url(/images/main/advantages/mask.svg);
+  mask: url(/images/main/advantages/mask.svg);
   -webkit-mask-size: 100% 100%;
   mask-size: 100% 100%;
   overflow: hidden;
